build: Fixed dockerfile