@@ -25,8 +25,9 @@ package com.redis.trino;
 
 import static java.util.Objects.requireNonNull;
 
+import java.util.List;
+
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableList;
 
 import io.trino.spi.Plugin;
 import io.trino.spi.connector.ConnectorFactory;
@@ -46,6 +47,6 @@ public class RediSearchPlugin implements Plugin {
 
 	@Override
 	public Iterable<ConnectorFactory> getConnectorFactories() {
-		return ImmutableList.of(connectorFactory);
+		return List.of(connectorFactory);
 	}
 }
